# soccer_sim_game

./: .gitignore  README.md  pyproject.toml
docs/: game_design_document.md  team_json_format.md  test_scenarios.md
examples/: a.json  b.json
sim_soccer/: __init__.py  __main__.py
sim_soccer/cli/: __init__.py  main.py
sim_soccer/core/: __init__.py  action_selector.py  contest_resolver.py  phase_manager.py  simulator.py
sim_soccer/field/: __init__.py  positioning.py  zone.py
sim_soccer/io/: __init__.py  event_printer.py  reporter.py  team_loader.py
sim_soccer/models/: events.py  match.py  player.py  team.py
sim_soccer/systems/: __init__.py  momentum.py  stamina.py  tactics.py
tests/integration/: __init__.py  test_match_simulation.py  test_team_loader.py
tests/scenarios/: __init__.py  test_attack_vs_defense.py  test_balanced_vs_specialized.py  test_extreme_tactics.py
tests/unit/: __init__.py  test_contest_resolver.py  test_player.py  test_stamina.py  test_tactics.py  test_team.py  test_zone.py
